# coalescent-swarm-rs

./: .gitignore  Cargo.toml  README.md
src/: data.rs  hash_id.rs  identity.rs  kademlia.rs  lib.rs  main.rs  messaging.rs  networking.rs  peers.rs
src/data/: hash_id.rs
src/identity/: agent.rs  persona.rs
src/networking/: connection.rs  websocket.rs
src/networking/connection/: udp.rs  websocket.rs
