[package]
name = "coalescent-swarm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "example-client"
path = "src/bin/example-client.rs"

[dependencies]
blake2s_simd = "1.0.0"
futures = "0.3"
local-ip-address = "0.4"
rmp-serde = "*"
serde = { version="1", features=["derive"] }
tokio = { version="1", features=["full"] }
tokio-tungstenite = "0.16"